feat(srv): changing entities to card and making code more generic